day13-gateway-api/manifests/kong-gatewayclass-and-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong-gw-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gw
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 30500
      allowedRoutes:
        namespaces: {from: Same}
